plugins {
    id "com.gradleup.shadow" version "9.4.1"
    id "java"
}

group "net.minecraft"
version "1.12.2"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    mavenCentral()
    maven {
        url = "https://github.com/SkidJava/Skid-central/raw/repository/"
    }
}

dependencies {
    implementation "com.github.oshi:oshi-core:6.6.5"
    implementation "com.ibm.icu:icu4j:78.3"
    implementation "info.picocli:picocli:4.7.7"
    implementation "com.paulscode:codecjorbis:20101023"
    implementation "com.paulscode:codecwav:20101023"
    implementation "com.paulscode:libraryjavasound:20101123"
    implementation "com.paulscode:librarylwjglopenal:20100824"
    implementation "com.paulscode:soundsystem:20120107"

    implementation "io.netty:netty-buffer:4.2.10.Final"
    implementation "io.netty:netty-transport:4.2.10.Final"
    implementation "io.netty:netty-transport-native-epoll:4.2.10.Final"
    implementation "io.netty:netty-handler:4.2.10.Final"

    implementation "com.google.guava:guava:33.6.0-jre"
    implementation "org.apache.commons:commons-lang3:3.20.0"
    implementation "commons-io:commons-io:2.22.0"
    implementation "commons-codec:commons-codec:1.22.0"
    implementation "net.java.jinput:jinput:2.0.10"
    implementation "net.java.jutils:jutils:1.0.0"
    implementation "com.google.code.gson:gson:2.14.0"
    implementation "org.apache.commons:commons-compress:1.28.0"
    implementation "org.apache.httpcomponents:httpclient:4.5.14"
    implementation "commons-logging:commons-logging:1.3.6"
    implementation "org.apache.httpcomponents:httpcore:4.4.16"
    implementation "it.unimi.dsi:fastutil:8.5.18"
    implementation "org.apache.logging.log4j:log4j-api:2.25.4"
    implementation "org.apache.logging.log4j:log4j-core:2.25.4"
    implementation "org.lwjgl.lwjgl:lwjgl:2.9.3"
    implementation "org.lwjgl.lwjgl:lwjgl_util:2.9.3"
    implementation "org.joml:joml:1.10.8"
    implementation "com.mojang:text2speech:1.10.3"
    implementation "com.mojang:authlib:1.5.25"

    testImplementation "org.junit.jupiter:junit-jupiter:5.11.4"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.11.4"
}

tasks.test {
    useJUnitPlatform()
}
